优化格式