@@ -57,7 +57,7 @@ public class FinanceInfoServiceImp extends ServiceImpl<FinanceInfoMapper, Financ
                         finance -> {
                             TUserVo tUserVo = userMap.get(finance.getBelongTo());
                             finance.setBelongToName(tUserVo == null ? null : (StringUtils.isEmpty(tUserVo.getNickName()) ? tUserVo.getUsername() : tUserVo.getNickName()));
-                        }).collect(Collectors.toList()))
+                        }).toList())
                 .orElse(null);
         if (result != null) {
             result.setRecords(financeInfoVos);
@@ -114,7 +114,7 @@ public class FinanceInfoServiceImp extends ServiceImpl<FinanceInfoMapper, Financ
                     FinanceInfo financeInfo = new FinanceInfo();
                     BeanUtils.copyProperties(item, financeInfo);
                     return financeInfo;
-                }).collect(Collectors.toList());
+                }).toList();
         this.saveBatch(financeList);
         return true;
     }
