@@ -22,7 +22,7 @@ public class WebFluxWithOpenFeignConfig {
     @Bean
     @ConditionalOnMissingBean
     public HttpMessageConverters messageConverters(ObjectProvider<HttpMessageConverter<?>> converters) {
-        return new HttpMessageConverters(converters.orderedStream().collect(Collectors.toList()));
+        return new HttpMessageConverters(converters.orderedStream().toList());
     }
 }
 
